2005-03-16 Scott Dattalo <scott@dattalo.com>
	* cli/scan.ll, src/stimuli.h, src/stimuli.cc, src/symbol.cc,
	src/symbol.h: Added/enhanced methods for searching, adding, and
	removing symbols and stimuli.

2005-03-14 J.R. Heisey <jrheisey@sourceforge.com>
  * src/modules.h, modules.cc, os_dependent.cc: Elimaticated
  undesired error message on failure to load a function of a
  module.
  Simplified Module_Library() constructor to use os independent
  api call get_library_export()

2005-03-14 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def: MSVC sync.
	* modules/modules.vcproj: Use new pthread library.
	* gui/gui_register.h, gui/gui_regwin.cc: pass registerValue by
	value in getValueAsString() method.

2005-03-03 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: MSVC sync

2005-03-10 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc: Added an 'X' state to getBitChar method
	of the IO_open_collector class.

2005-03-09 Borut Razem <borut.razem@siol.net>
	* modules/makefile.mingw: pthreads upgrade

2005-03-08 Scott Dattalo <scott@dattalo.com>
	* src/value.cc, gui/gui_profile.cc, gui/gui_statusbar.cc,
	gui/gui_trace.cc: Corrected temporary hack regarding PRINTF_INT64_MODIFIER

2005-03-08 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: removed examples\14bit\*.inc
	* cli/cmd_manager.h: added newline at the end of file
	* doc/gpsimWin32.html: atk upgraded to 1.8.0

2005-03-08 Scott Dattalo <scott@dattalo.com>
	* regression/ccp/ccp.asm: improvements to ccp regression test
	* gui/gui_profile.cc, gui/gui_trace.cc, gui/gui_statusbar.cc,
	src/value.cc: Temporarily removed windows-specific macro.
	* src/stimulus.cc, src/stimuli.h: Cleaned up asynchronous stimuli
	* src/registers.h, src/ssp.cc, src/ioports.cc, src/14bit-tmrs.cc:
	Made the default register class access functions all go through
	one function to obtain a register's value.

2005-02-26 Scott Dattalo <scott@dattalo.com>
	* src/processor.h, src/trace.h, src/breakpoints.h, src/symbol.h,